# webnose

./: .gitignore  LICENSE  MANIFEST.in  README.md  go.mod  go.sum  main.go  pyproject.toml  requirements.txt  test_urls.txt  update_templates.py  webnose.py
output/: clean_output.json  final_test.json  smells.json  subdomains.json  test.json
pkg/models/: models.go
pkg/scanner/: scanner.go
pkg/templates/: loader.go
smell_templates/: CDATA.yaml  IE_browser_hack.yaml  NUXT.yaml  adhoc_ajax.yaml  coming_soon.yaml  console_debugging.yaml  cors_star.yaml  dangerous_functions.yaml  deserialization.yaml  disabled_button.yaml  event_handlers.yaml  fileupload.yaml  get_params.yaml  graphql.yaml  hardcoded_style.yaml  html_newlines.yaml  huge_content_length.yaml  interesting_attrs.yaml  interesting_tech.yaml  juicy_url.yaml  localhost.yaml  no_cms.yaml  signup.yaml  spaces_in_url.yaml  suspicious_cookies.yaml  url_ip.yaml  vintage_DOCTYPE.yaml  vintage_tags.yaml  weird_port.yaml
smell_templates/legacy/: IE_browser_hack.yaml  activeX.yaml  adhoc_ajax.yaml  applet_tag.yaml  coldfusion_markers.yaml  console_debugging.yaml  disabled_button.yaml  document_write.yaml  event_handlers.yaml  flash_content.yaml  frames_js_nav.yaml  frameset.yaml  hardcoded_style.yaml  html_newlines.yaml  inline_base64.yaml  iso_8859_1_charset.yaml  javascript_void_links.yaml  jquery_old_version.yaml  jquery_ui.yaml  jsonp_callback.yaml  legacy_css_filters.yaml  legacy_mime_sniff.yaml  meta_refresh.yaml  non_html5_input_types.yaml  old_asp_comments.yaml  old_meta_cache.yaml  (+7 more)
tests/: test_webnose.py
(+39 files in other folders)
